--- a/package.json
+++ b/package.json
@@ -9,10 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/material-top-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
     "expo": "~46.0.9",
+    "expo-cli": "^6.0.5",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "moment": "^2.29.4",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-modalize": "^2.1.1",
+    "react-native-pager-view": "5.4.24",
+    "react-native-paper": "^4.12.4",
+    "react-native-portalize": "^1.0.7",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-view-slider": "^1.1.1",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "rn-material-ui-textfield": "^1.0.7",
+    "expo-blur": "~11.2.0",
+    "react-native-reanimated": "~2.9.1",
+    "lottie-react-native": "5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
