--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "rn-material-ui-textfield": "^1.0.7",
     "expo-blur": "~11.2.0",
     "react-native-reanimated": "~2.9.1",
-    "lottie-react-native": "5.1.3"
+    "lottie-react-native": "5.1.3",
+    "expo-image-picker": "~13.3.1",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
