--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
     "expo": "~46.0.9",
+    "expo-blur": "~11.2.0",
     "expo-cli": "^6.0.5",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "moment": "^2.29.4",
+    "native-base": "^3.4.17",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -29,6 +35,7 @@
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^4.12.4",
     "react-native-portalize": "^1.0.7",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
@@ -38,13 +45,7 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "rn-material-ui-textfield": "^1.0.7",
-    "expo-blur": "~11.2.0",
-    "react-native-reanimated": "~2.9.1",
-    "lottie-react-native": "5.1.3",
-    "expo-image-picker": "~13.3.1",
-    "expo-image-manipulator": "~10.4.0",
-    "expo-location": "~14.3.0"
+    "rn-material-ui-textfield": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
