--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "native-base": "^3.4.17",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-input-color": "^4.0.1",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-viewing": "^0.2.2",
