--- a/app.json
+++ b/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.dukizwe.chapchappartenaireapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "92cbc0fa-5479-49cf-9718-2fa286b94f3c"
+      }
     }
   }
 }
