--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.0.0",
     "react-input-color": "^4.0.1",
     "react-native": "0.69.5",
+    "react-native-collapsible-tab-view": "^4.5.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-modalize": "^2.1.1",
